[gd_scene load_steps=33 format=3 uid="uid://b7ifegmm708j0"]

[ext_resource type="Script" path="res://components/fighting/damage_dealer.gd" id="1_pehbd"]
[ext_resource type="Script" path="res://components/fighting/killable.gd" id="2_2nxna"]
[ext_resource type="Resource" uid="uid://bmgi6xtytij76" path="res://components/fighting/knockback/medium_knockback.tres" id="2_nrrx3"]
[ext_resource type="AudioStream" uid="uid://81oq30bkr5jj" path="res://sfx/spells/fire_spell_sustain.mp3" id="3_cvpat"]
[ext_resource type="Script" path="res://components/fighting/attack_area.gd" id="4_0vw7e"]
[ext_resource type="Texture2D" uid="uid://3ko6dglu7234" path="res://vfx/particle_sheet.png" id="4_5a2no"]
[ext_resource type="AudioStream" uid="uid://4xjqrgtw7yk7" path="res://sfx/spells/fire_spell_impact.mp3" id="5_gaogb"]

[sub_resource type="Animation" id="Animation_jiilk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasGroup/GPUParticles2D/GPUParticles2D2:amount_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../DamageDealer:impact_velocity_magnitude")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}

[sub_resource type="Animation" id="Animation_q30au"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(2.37841, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(0.466517, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(50, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasGroup/GPUParticles2D/GPUParticles2D2:amount_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 4.89,
"start_offset": 0.0,
"stream": ExtResource("3_cvpat")
}],
"times": PackedFloat32Array(-0.3)
}
tracks/4/use_blend = true
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../AudioStreamPlayer2D:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(6.9644, 1),
"update": 0,
"values": [5.0, -80.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../DamageDealer:impact_velocity_magnitude")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(2.73208, 1),
"update": 0,
"values": [40.0, 0.0]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Killable")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}

[sub_resource type="Animation" id="Animation_qn0jv"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gjiw"]
_data = {
"RESET": SubResource("Animation_jiilk"),
"default": SubResource("Animation_q30au"),
"die": SubResource("Animation_qn0jv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qju78"]
radius = 2.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_21qm4"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_emjv0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.56792, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5841j"]
curve = SubResource("Curve_emjv0")

[sub_resource type="Curve" id="Curve_snmov"]
min_value = -1.0
max_value = 0.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, -1), -3.8424, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_nuy0s"]
curve_y = SubResource("Curve_snmov")

[sub_resource type="Curve" id="Curve_6pl41"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 26.9784), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_iew3n"]
curve = SubResource("Curve_6pl41")

[sub_resource type="Curve" id="Curve_bbiyu"]
_data = [Vector2(0.007109, 0), 0.0, 0.0, 0, 0, Vector2(0.222749, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_piat4"]
curve = SubResource("Curve_bbiyu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3icsx"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 0.55
angle_min = -720.0
angle_max = 720.0
direction = Vector3(-1, 0, 0)
flatness = 0.533
initial_velocity_min = 8.8
initial_velocity_max = 14.2
directional_velocity_min = 20.2
directional_velocity_max = 20.2
directional_velocity_curve = SubResource("CurveXYZTexture_nuy0s")
gravity = Vector3(0, 0, 0)
linear_accel_min = 2.0
linear_accel_max = 2.0
linear_accel_curve = SubResource("CurveTexture_iew3n")
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_piat4")
color = Color(1, 0.505882, 0.309804, 1)
alpha_curve = SubResource("CurveTexture_5841j")
anim_offset_max = 1.0

[sub_resource type="Curve" id="Curve_nje61"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.56792, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_oid6m"]
curve = SubResource("Curve_nje61")

[sub_resource type="Curve" id="Curve_jhubh"]
min_value = -1.0
max_value = 0.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, -1), -3.461, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_huc6t"]
curve_y = SubResource("Curve_jhubh")

[sub_resource type="Curve" id="Curve_pxddx"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 26.9784), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_63og4"]
curve = SubResource("Curve_pxddx")

[sub_resource type="Curve" id="Curve_f7jof"]
_data = [Vector2(0.007109, 0), 0.0, 0.0, 0, 0, Vector2(0.222749, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_qdb1n"]
curve = SubResource("Curve_f7jof")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kq3wh"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 0.55
angle_min = -720.0
angle_max = 720.0
direction = Vector3(-1, 0, 0)
spread = 18.835
flatness = 0.533
initial_velocity_min = 2.0
initial_velocity_max = 4.0
directional_velocity_min = 20.2
directional_velocity_max = 20.2
directional_velocity_curve = SubResource("CurveXYZTexture_huc6t")
gravity = Vector3(0, 0, 0)
linear_accel_min = 2.0
linear_accel_max = 2.0
linear_accel_curve = SubResource("CurveTexture_63og4")
scale_curve = SubResource("CurveTexture_qdb1n")
color = Color(1, 0.74902, 0.678431, 1)
alpha_curve = SubResource("CurveTexture_oid6m")
anim_offset_max = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mmrge"]
radius = 4.0

[node name="FireSpell" type="Node2D"]

[node name="DamageDealer" type="Node2D" parent="." node_paths=PackedStringArray("killable")]
script = ExtResource("1_pehbd")
knockback = ExtResource("2_nrrx3")
killable = NodePath("../Killable")

[node name="Killable" type="Node" parent="."]
script = ExtResource("2_2nxna")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Area2D")
libraries = {
"": SubResource("AnimationLibrary_7gjiw")
}
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qju78")

[node name="CanvasGroup" type="CanvasGroup" parent="Area2D"]

[node name="GPUParticles2D" type="GPUParticles2D" parent="Area2D/CanvasGroup"]
modulate = Color(1.5, 1.5, 1, 1)
material = SubResource("CanvasItemMaterial_21qm4")
position = Vector2(1, 0)
amount = 12
process_material = SubResource("ParticleProcessMaterial_3icsx")
texture = ExtResource("4_5a2no")
explosiveness = 0.19
local_coords = true

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Area2D/CanvasGroup/GPUParticles2D"]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_21qm4")
amount = 6
process_material = SubResource("ParticleProcessMaterial_kq3wh")
texture = ExtResource("4_5a2no")
explosiveness = 0.1

[node name="AttackArea" type="Area2D" parent="Area2D" node_paths=PackedStringArray("damage_dealer")]
collision_layer = 0
collision_mask = 5
monitorable = false
script = ExtResource("4_0vw7e")
damage_dealer = NodePath("../../DamageDealer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/AttackArea"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_mmrge")

[node name="ImpactAudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gaogb")
bus = &"Sfx"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0
bus = &"Sfx"

[connection signal="died" from="Killable" to="AnimationPlayer" method="play" binds= ["die"]]
[connection signal="died" from="Killable" to="Area2D/AttackArea" method="set_active" binds= [false]]
[connection signal="body_entered" from="Area2D" to="Killable" method="die" unbinds=1]
[connection signal="body_entered" from="Area2D" to="ImpactAudioPlayer2D" method="play" unbinds=1]
[connection signal="damage_applied" from="Area2D/AttackArea" to="Killable" method="die" unbinds=1]
[connection signal="damage_applied" from="Area2D/AttackArea" to="ImpactAudioPlayer2D" method="play" unbinds=1]
